make jar reading work in windows